feat: add docs to all operations
